# cpp-inheritance-shooter

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  README.md  bullet.cpp  bullet.h  enemy.cpp  enemy.h  engine.cpp  engine.h  game_main  main.cpp  main_original.cpp  object.h  player.h  position.h  simple_main  test_game  test_game.cpp
game/: CMakeLists.txt  game.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
logs/: 3b_textResult.json
unit_tests/: CMakeLists.txt
